Code cleanup (#2)
* Delete MC4DApplet file
* Add .gitignore
* Fix -Xilnt:deprecation, -Xlint:unchecked, and -Xlint:cast compiler warnings
* Add IntelliJ project files
* Use ArrayList or LinkedList instead of Vector
* Use HashMap or HashSet instead of Hashtable
* Remove some dead code and rework some double negations
* Rewrite VecMath.normalize() functions
* Refactor PipelineUtils.pick() and add bounds check
* Directly calculate result for PipelineUtils.twice_triangle_area()